15번째 Commit이다. ===> Volley를 통해서 게시판 글 생성 및 수정 그리고 삭제까지 모두 구현을 하였다. 다만 문제점은 글 생성 및 수정 그리고 삭제를 했을 때 바로 Update가 되지가 않는다. (즉 바로 Reload가 되지가 않는다.)

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".boardInsertActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".boardUpdateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
