17번째 Commit이다. ===> 규렬이 형것과 내것을 합쳐놓은 것이다.(게시판에 있는 글쓰기 버튼을 보이게 할것!!!)

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,6 +16,20 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".board_write">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".board_notice">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".boardInsertActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
